# template_code

./: LICENSE  README.md
template_main/c/: CMakeLists.txt  main.c  simple_c.h  template_main.c  template_main.h
