cmake_minimum_required(VERSION 2.6)
PROJECT(template_main)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR} SRC_LIST)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -W -Wall -std=c11 ")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

LINK_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

# TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread )
